input/fsh/examples/Invalid/Invalid_Example_Practitioner.fsh
Instance: INVALID-Practitioner
InstanceOf: ERPServiceRequestPractitioner
Usage: #example
Title: "Invalider Practitioner"
Description: "Dieses Beispiel ist invalide und dient nur der Sicherstellung der Validierung."
* identifier[LANR].value = "838382202"
* identifier[TelematikID].value = "1-838382202"
* name[+]
  * use = #officially
  * family = "Topp-Glücklich"
  * given = "Hans"
  * prefix = "Dr. med."
  * text = "Dr. med. Hans Topp-Glücklich"